# orderbook_aggregator

./: Cargo.toml  README.md  build.rs
proto/: orderbook_aggregator.proto
src/: aggregator.rs  binance.rs  bitstamp.rs  client.rs  error.rs  exchange.rs  grpc_client.rs  order.rs  server.rs  worker.rs
