[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = "0.7"
tungstenite = { version = "0.17", features = ["native-tls"] }
url = "2"

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "orderbook_aggregator_server"
path = "src/server.rs"

[[bin]]
name = "orderbook_aggregator_client"
path = "src/grpc_client.rs"